# assets-compiler

./: CMakeLists.txt
compiler/src/: mesh_compiler.cpp
docs/: TEXTURE_COMPRESSION.md
formats/include/assets_format/: format_validator.hpp  mesh_format.hpp  model_format.hpp  opengl_format.hpp  texture_format.hpp
libs/assets_loader/examples/: opengl_texture_loading_example.cpp
libs/assets_loader/include/: texture_loader.hpp
libs/assets_loader/include/assets_loader/: mesh_loader.hpp  model_loader.hpp  texture_loader.hpp
libs/assets_loader/src/: mesh_loader.cpp  model_loader.cpp  texture_loader.cpp
src/: main.cpp  mesh_compiler.cpp  mesh_compiler.h  model_compiler.cpp  texture_compiler.cpp  texture_compiler.h
src/utils/: format.h
test/: main.cpp
test/models/sword/: license.txt  scene.gltf
tools/assets_compiler/include/: mesh_compiler.h  model_compiler.h  texture_compiler.h
tools/assets_compiler/src/: main.cpp  mesh_compiler.cpp  model_compiler.cpp  texture_compiler.cpp
